# solutions-engineering

./: CLAUDE.md
hands_on/: README.md
hands_on/00_gcp_quickstart/: deploy_and_run.sh  main.py  pyproject.toml
hands_on/01_union_quickstart/: main.py  pyproject.toml
hands_on/02_fanout_fanin/: main.py  pyproject.toml
hands_on/03_trigger/: main.py  pyproject.toml
hands_on/04_app/: main.py  pyproject.toml
hands_on/04_app/.flyte/: config.yaml
hands_on/05_full_workflows/vllm/: main.py  pyproject.toml
hands_on/05_full_workflows/wikipedia_embedding/: main.py  pyproject.toml
onboarding_workshop/: 00_hello_union.py  01_parallel_processing.py  02_ml_pipeline.py  03_hyperparameter_tuning.py  04_production.py  05_streamlit_dashboard.py  README.md  requirements.txt  workshop.ipynb
onboarding_workshop/.flyte/: config.yaml
