[project]
name = "wikipedia-embedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flyte>=2.0.0b35",
    "sentence-transformers>=5.1.2",
    "transformers>=4.41.0",
    "huggingface-hub>=0.24",
    "hf-transfer",
    "datasets>=2.18",
]
